fixed padding and overflow issue on smaller screen sizes

--- a/sass/base/_utilities.scss
+++ b/sass/base/_utilities.scss
@@ -1,6 +1,4 @@
-.u-center-text {
-    text-align: center !important;
-}
+.u-center-text { text-align: center !important; }
 
 .u-margin-bottom-small {margin-bottom: 1.5rem !important;}
 .u-margin-bottom-medium {
@@ -14,7 +12,7 @@
     margin-bottom: 8rem !important;
 
     @include respond(tab-port) {
-       margin-bottom: 5rem !important;
+        margin-bottom: 5rem !important;
     }
 }
 
