--- a/sass/layout/_grid.scss
+++ b/sass/layout/_grid.scss
@@ -6,12 +6,13 @@
         margin-bottom: $gutter-vertical;
 
         @include respond(tab-port) {
-             margin-bottom: $gutter-vertical-small;
+            margin-bottom: $gutter-vertical-small;
         }
     }
 
     @include respond(tab-port) {
         max-width: 50rem;
+        padding: 0 3rem;
     }
 
     @include clearfix;
@@ -21,6 +22,7 @@
 
         &:not(:last-child) {
             margin-right: $gutter-horizontal;
+            
                 @include respond(tab-port) {
                 margin-right: 0;
                 margin-bottom: $gutter-vertical-small;
