--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -1,6 +1,7 @@
 .section-about {
     background-color: $color-grey-light-1;
-    padding: 20rem 0;
+    padding: 25rem 0;
+    // padding: 20rem 0;
     margin-top: -20vh;
 
     @include respond(tab-port) {
@@ -9,7 +10,8 @@
 }
 
 .section-features {
-    padding: 20rem 20rem;
+    padding: 20rem 0;
+    // padding: 20rem 20rem;
     background-image: linear-gradient(
         to right bottom,
         rgba($color-primary-light, 0.8),
@@ -30,7 +32,8 @@
 
 .section-tours {
     background-color: $color-grey-light-1;
-    padding: 20rem 15rem 15rem 15rem;
+    padding: 25rem 0 15rem 0;
+    // padding: 20rem 15rem 15rem 15rem;
     margin-top: -10rem;
 
     @include respond(tab-port) {
